# waveshare-picture-frame

./: CLAUDE.md  README.md  config.toml  config.toml.example  main.py  pyproject.toml  waveshare-frame.service
.github/workflows/: ci.yml
src/: __init__.py  config.py  state.py
src/display/: __init__.py  base.py  mock.py  waveshare.py
src/handlers/: __init__.py  base.py  image_handler.py  system_handler.py
src/mqtt/: __init__.py  client.py
src/pisugar/: __init__.py  client.py
src/utils/: __init__.py  image_processing.py
