[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "waveshare-picture-frame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pillow>=10.4.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
rpi = ["RPi.GPIO", "spidev"]
jetson = ["Jetson.GPIO"]

[dependency-groups]
dev = ["ruff>=0.8.4"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["src/vendor/waveshare_epd"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
